--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-.mainNavigation {
+
+.HeaderBox {
     top: 0px;
     left: 0px;
     width: 1920px;
@@ -6,12 +7,27 @@
     background: #062639 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
     opacity: 1;
+    padding: 1.5em;
 }
+
+.LogoLight{
+    display: inline-block;
+    margin-left: 4em;
+}
+
+.NavigationTextBlock{
+    display: inline;
+    margin-right: 4em;
+    float: right;
+
+}
+
+
 
 .navigationText {
     top: 33px;
     left: 1432px;
-    width: 97px;
+    width: 120px;
     height: 19px;
     text-align: left;
     font: Bold 16px/19px Raleway;
@@ -20,14 +36,101 @@
     opacity: 1;
     right: 0;
     display: inline-block;
+    margin-left: 2em;
+}
+/* Изменение цвета ссылок при наведении курсора */
+.navigationText:hover {
+    background-color: red;
+
 }
 
-.LogoLight{
-    display: inline-block;
-    margin-left: 3em;
+/* Добавить цвет для активной/текущей ссылки */
+.navigationText.active {
+    background-color: grey;
+    color: white;
 }
 
-.NavigationTextBlock{
-    display: inline-block;
-    margin-right: 3em;
+.redText {
+    top: 235px;
+    width: 287px;
+    height: 37px;
+    font: Bold 32px/59px Raleway;
+    letter-spacing: 0;
+    color: #EA2340;
+    opacity: 1;
+    margin-left: 6.25em;
+    margin-bottom: 2px;
+}
+
+.greyText {
+    top: 267px;
+    left: 199px;
+    width: 207px;
+    height: 19px;
+    text-align: left;
+    font: Bold 16px/24px Raleway;
+    letter-spacing: 0;
+    color: #06263998;
+    opacity: 1;
+    margin-left: 12.5em;
+    margin-top: 0px;
+}
+.formWrapper{
+    top: 59px;
+    left: 0px;
+    width: 1920px;
+    height: 766px;
+    background: transparent 0% 0% no-repeat padding-box;
+    opacity: 1;
+}
+
+
+.searchContainer{
+    margin-top: 143.1px;
+    top: 202px;
+    left: 0.40771484375px;
+    width: 609px;
+    height: 379px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #0000005F;
+    opacity: 1;
+}
+.inputShape{
+    top: 311px;
+    left: 199px;
+    width: 371px;
+    height: 47px;
+    border: 1px solid #5F727E;
+    opacity: 1;
+    margin-left: 12.5em;
+    margin-bottom: 20px;
+}
+
+#yallaBtn{
+    top: 492px;
+    left: 199px;
+    width: 188px;
+    height: 48px;
+    background: #EA2340 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000052;
+    opacity: 1;
+    margin-left: 200px;
+    border: none;
+    text-align: center;
+    font: Bold 18px/49px Raleway;
+    letter-spacing: 0;
+    color: #FFFFFF;
+    opacity: 1;
+}
+
+.redLine{
+    top: 567px;
+    left: 539px;
+    width: 67px;
+    height: 10px;
+    background: #EA2340 0% 0% no-repeat padding-box;
+    opacity: 1;
+    margin-left: 535px;
+    margin-top: 25px;
+    clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
 }
