--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 .HeaderBox {
     top: 0px;
     left: 0px;
-    width: 1920px;
     height: 80px;
     background: #062639 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
@@ -10,7 +9,7 @@
     padding: 1.5em;
 }
 
-.LogoLight{
+.Logo{
     display: inline-block;
     margin-left: 4em;
 }
@@ -134,3 +133,150 @@
     margin-top: 25px;
     clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
 }
+.redNumber{
+    top: 1219px;
+    left: 165px;
+    text-align: left;
+    font: Bold 139px/139px Bebas Neue;
+    letter-spacing: 0;
+    color: #EA2340;
+    text-transform: capitalize;
+    opacity: 1;
+    display: inline-block;
+    margin-right: 40px;
+    margin-left: 1em;
+    margin-bottom: 0;
+}
+
+.blueBigText{
+    top: 1230px;
+    left: 241px;
+    width: 13em;
+    height: 1em;
+    text-align: left;
+    font: Bold 54px/54px Bebas Neue;
+    letter-spacing: 0;
+    color: #062639;
+    text-transform: capitalize;
+    opacity: 1;
+    display: inline-block;
+    margin-right: 2em;
+
+}
+
+.smallBlueText{
+    top: 1233px;
+    left: 1097px;
+    width: 641px;
+    height: 97px;
+    text-align: left;
+    font: Bold 16px/24px Raleway;
+    letter-spacing: 0;
+    color: #062639;
+    opacity: 1;
+    display: inline-block;
+}
+
+.marginLeft {
+    margin-left: 5em;
+}
+
+.displayInline{
+    display: inline-block;
+}
+
+.inlineBlock{
+    display: inline-block;
+    clip-path: polygon(0 1%, 75% 0, 100% 99%,  25% 100%, );
+    width: 37em;
+
+}
+
+.redBackGround{
+    height: 27em;
+    background: #EA2340;
+    display: flex;
+    /*clip-path: polygon(0 1%, 95% 0, 100% 99%,  55% 100%, );*/
+}
+.section2Wrapper{
+    height: auto;
+    margin-top:2em;
+}
+
+.blueBackGround{
+    margin-left: 5em;
+    background: #062639 0% 0% no-repeat padding-box;
+    height: 30em;
+
+}
+.imageSizing{
+    height: 25em;
+    width: 65em;
+}
+
+.vehicleName{
+    top: 1879px;
+    left: 837px;
+    width: 110px;
+    height: 32px;
+    text-align: left;
+    font: Bold 32px/38px Bebas Neue;
+    letter-spacing: 0;
+    color: #FFFFFF;
+    text-transform: capitalize;
+    opacity: 1;
+    display: inline-block;
+}
+
+
+.userPics{
+    border-radius: 100px; /* Радиус скругления */
+    border: none; /* Параметры рамки */
+    box-shadow: 0 0 7px #666; /* Параметры тени */
+    top: 2452px;
+    left: 1095px;
+    width: 89px;
+    height: 89px;
+    background: transparent 0% 0% no-repeat padding-box;
+    opacity: 1;
+    margin-left: 8em;
+    display: inline-block;
+}
+
+.redSmallText{
+    top: 2671px;
+    left: 408px;
+    width: 97px;
+    height: 19px;
+    text-align: left;
+    font: Bold 16px/24px Raleway;
+    letter-spacing: 0;
+    color: #EA2340;
+    opacity: 1;
+}
+
+.blackSmalltext {
+    top: 2673px;
+    left: 539px;
+    width: 115px;
+    height: 15px;
+    text-align: left;
+    font: Bold 13px/24px Raleway;
+    letter-spacing: 0;
+    color: #06263998;
+    opacity: 1;
+}
+.section2Wrapper {
+    display: flex;
+    align-items: center;
+
+
+}
+.firstColumn{
+    flex: 50%;
+}
+.secondColumn{
+    flex: 50%;
+}
+
+
