--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     box-shadow: 0px 3px 6px #00000029;
     opacity: 1;
     padding: 1.5em;
+    width: 120em;
 }
 
 .Logo{
@@ -77,10 +78,11 @@
 .formWrapper{
     top: 59px;
     left: 0px;
-    width: 1920px;
-    height: 766px;
+    width: 120em;
+    height: 48em;
     background: transparent 0% 0% no-repeat padding-box;
     opacity: 1;
+    display: flex;
 }
 
 
@@ -105,13 +107,13 @@
     margin-bottom: 20px;
 }
 
-#yallaBtn{
+.yallaBtn{
     top: 492px;
     left: 199px;
     width: 188px;
     height: 48px;
-    background: #EA2340 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #00000052;
+    background: #EA2340 0 0 no-repeat padding-box;
+    box-shadow: 0 3px 6px #00000052;
     opacity: 1;
     margin-left: 200px;
     border: none;
@@ -119,7 +121,6 @@
     font: Bold 18px/49px Raleway;
     letter-spacing: 0;
     color: #FFFFFF;
-    opacity: 1;
 }
 
 .redLine{
@@ -134,25 +135,17 @@
     clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
 }
 .redNumber{
-    top: 1219px;
-    left: 165px;
-    text-align: left;
-    font: Bold 139px/139px Bebas Neue;
+    font: Bold 130px/130px Bebas Neue;
     letter-spacing: 0;
     color: #EA2340;
-    text-transform: capitalize;
     opacity: 1;
     display: inline-block;
     margin-right: 40px;
-    margin-left: 1em;
     margin-bottom: 0;
 }
 
 .blueBigText{
-    top: 1230px;
-    left: 241px;
     width: 13em;
-    height: 1em;
     text-align: left;
     font: Bold 54px/54px Bebas Neue;
     letter-spacing: 0;
@@ -161,14 +154,12 @@
     opacity: 1;
     display: inline-block;
     margin-right: 2em;
+    margin-top: 2em;
 
 }
 
 .smallBlueText{
-    top: 1233px;
-    left: 1097px;
     width: 641px;
-    height: 97px;
     text-align: left;
     font: Bold 16px/24px Raleway;
     letter-spacing: 0;
@@ -177,36 +168,39 @@
     display: inline-block;
 }
 
-.marginLeft {
-    margin-left: 5em;
-}
-
-.displayInline{
-    display: inline-block;
-}
 
 .inlineBlock{
     display: inline-block;
-    clip-path: polygon(0 1%, 75% 0, 100% 99%,  25% 100%, );
+    /*clip-path: polygon(0 1%, 75% 0, 100% 99%,  25% 100%, );*/
     width: 37em;
+    text-align: center;
+}
+.vehicle1{
+    margin-left: -14em;
+}
+.vehicle3{
+    margin-right: -14em;
 
 }
 
+
+
+.section2Wrapper{
+    height: auto;
+    margin-top:4em;
+}
 .redBackGround{
-    height: 27em;
+    height: 29em;
     background: #EA2340;
     display: flex;
     /*clip-path: polygon(0 1%, 95% 0, 100% 99%,  55% 100%, );*/
 }
-.section2Wrapper{
-    height: auto;
-    margin-top:2em;
-}
-
 .blueBackGround{
-    margin-left: 5em;
+    margin-bottom: 2em;
     background: #062639 0% 0% no-repeat padding-box;
-    height: 30em;
+    height: 32em;
+    width: 120em;
+
 
 }
 .imageSizing{
@@ -215,8 +209,6 @@
 }
 
 .vehicleName{
-    top: 1879px;
-    left: 837px;
     width: 110px;
     height: 32px;
     text-align: left;
@@ -226,26 +218,24 @@
     text-transform: capitalize;
     opacity: 1;
     display: inline-block;
+    margin-top: 16px;
+    margin-left: 10.5em;
 }
 
 
 .userPics{
     border-radius: 100px; /* Радиус скругления */
     border: none; /* Параметры рамки */
-    box-shadow: 0 0 7px #666; /* Параметры тени */
-    top: 2452px;
-    left: 1095px;
     width: 89px;
     height: 89px;
     background: transparent 0% 0% no-repeat padding-box;
     opacity: 1;
-    margin-left: 8em;
     display: inline-block;
+    margin-right: 2em;
+
 }
 
 .redSmallText{
-    top: 2671px;
-    left: 408px;
     width: 97px;
     height: 19px;
     text-align: left;
@@ -256,8 +246,6 @@
 }
 
 .blackSmalltext {
-    top: 2673px;
-    left: 539px;
     width: 115px;
     height: 15px;
     text-align: left;
@@ -269,7 +257,8 @@
 .section2Wrapper {
     display: flex;
     align-items: center;
-
+    margin-left: 10em;
+    width: 120em;
 
 }
 .firstColumn{
@@ -280,3 +269,171 @@
 }
 
 
+
+.nameDateWrapper {
+    padding-left: 7.5em;
+    margin-bottom: 3em;
+}
+.marginTop{
+    margin-top: 20px;
+}
+.marginLeft {
+    margin-left: 5em;
+}
+.displayInline{
+    display: inline-block;
+}
+
+.whitePriceBox {
+    width: 15em;
+    height: 91px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000052;
+    opacity: 1;
+    margin-left:25em;
+    padding: 0em;
+
+}
+.dollarBox {
+    display: inline-block;
+    margin-left: -2.5em;
+   margin-top: -2.5em;
+}
+.priceBox {
+    display: inline-block;
+}
+.perDayBox {
+    display: inline-block;
+
+}
+
+.dollarSign {
+    /*width: 18px;*/
+    /*height: 34px;*/
+    /*text-align: center;*/
+    font: Bold 31px/102px Raleway;
+    letter-spacing: 0;
+    color: #EA2340;
+    opacity: 1;
+    display: inline-block;
+    margin-bottom: 1.5em;
+}
+
+.price {
+    width: 104px;
+    height: 88px;
+    text-align: center;
+    font: Bold 88px/106px Bebas Neue;
+    letter-spacing: 0;
+    color: #EA2340;
+    text-transform: capitalize;
+    opacity: 1;
+    display: inline-block;
+
+}
+
+.perDay {
+    margin-left: 50px;
+    display: inline-block;
+    width: 24px;
+    height: 60px;
+    transform: matrix(0, -1, 1, 0, 0, 0);
+    text-align: center;
+    font: Bold 24px/29px Bebas Neue;
+    /*24/29*/
+    letter-spacing: 0;
+    color: #06263998;
+    text-transform: capitalize;
+    opacity: 1;
+}
+
+.flexContainerForm {
+    display: flex;
+
+}
+
+.loginContainer {
+    /*top: 80px;*/
+    /*left: 1291px;*/
+    width: 629px;
+    height: 766px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #0000005F;
+    opacity: 1;
+    display: inline-block;
+
+
+}
+
+.loginInputContainer{
+    /*top: 258px;*/
+    /*left: 1320px;*/
+    width: 427px;
+    height: 279px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    opacity: 1;
+
+
+}
+
+.recoverySentMessage{
+    /*top: 375px;*/
+    /*left: 1432px;*/
+    width: 204px;
+    height: 45px;
+    text-align: center;
+    font:  18px/24px Raleway;
+    letter-spacing: 0;
+    color: #062639;
+    opacity: 1;
+}
+
+.formWrapperLeft{
+    /*top: 59px;*/
+    /*left: -629px;*/
+
+    width: 120em;
+    height: 766px;
+    background: transparent 0 0 no-repeat padding-box;
+    opacity: 1;
+    display: inline-block;
+    margin-left: -40em;
+}
+
+.recoverySentMessageContainer {
+    margin-left: 12em;
+    visibility: hidden;
+}
+
+.recoveryLink{
+    margin-top: 14em;
+    margin-bottom: 6em;
+    margin-left: 12em;
+}
+
+.searchWithoutRegContainer{
+    top: 164px;
+    left: 0px;
+    width: 609px;
+    height: 914px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #0000005F;
+    opacity: 1;
+}
+
+.sortByWrapper {
+    display: flex;
+
+}
+.lowToHigh{
+    clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
+    top: 529px;
+    left: 205px;
+    width: 131px;
+    height: 19px;
+    text-align: left;
+    font: Bold 16px/24px Raleway;
+    letter-spacing: 0;
+    background: #5F727E;
+    opacity: 1;
+}
