--- a/src/Footers.css
+++ b/src/Footers.css
@@ -91,6 +91,10 @@
     justify-content: flex-start;
 }
 
+.hidden {
+    display: none;
+}
+
 /*Далее работаю с FOOTER 2-й страницы*/
 /*Далее работаю с FOOTER 2-й страницы*//*Далее работаю с FOOTER 2-й страницы*//*Далее работаю с FOOTER 2-й страницы*/
 /*Далее работаю с FOOTER 2-й страницы*//*Далее работаю с FOOTER 2-й страницы*//*Далее работаю с FOOTER 2-й страницы*/
