--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,13 @@
 
 .HeaderBox {
-    top: 0px;
-    left: 0px;
     height: 80px;
     background: #062639 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
-    opacity: 1;
-    padding: 1.5em;
-    width: 120em;
+    padding-top: 1.5em;
+    padding-left: 1.5em;
 }
 
 .Logo{
-    display: inline-block;
     margin-left: 4em;
 }
 
@@ -33,7 +29,6 @@
     font: Bold 16px/19px Raleway;
     letter-spacing: 0;
     color: #FFFFFF;
-    opacity: 1;
     right: 0;
     display: inline-block;
     margin-left: 2em;
@@ -57,7 +52,6 @@
     font: Bold 32px/59px Raleway;
     letter-spacing: 0;
     color: #EA2340;
-    opacity: 1;
     margin-left: 6.25em;
     margin-bottom: 2px;
 }
@@ -71,7 +65,6 @@
     font: Bold 16px/24px Raleway;
     letter-spacing: 0;
     color: #06263998;
-    opacity: 1;
     margin-left: 12.5em;
     margin-top: 0px;
 }
@@ -81,7 +74,6 @@
     width: 120em;
     height: 48em;
     background: transparent 0% 0% no-repeat padding-box;
-    opacity: 1;
     display: flex;
 }
 
@@ -94,7 +86,6 @@
     height: 379px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #0000005F;
-    opacity: 1;
 }
 .inputShape{
     top: 311px;
@@ -102,9 +93,9 @@
     width: 371px;
     height: 47px;
     border: 1px solid #5F727E;
-    opacity: 1;
     margin-left: 12.5em;
     margin-bottom: 20px;
+    margin-top: 5px;
 }
 
 .yallaBtn{
@@ -114,7 +105,6 @@
     height: 48px;
     background: #EA2340 0 0 no-repeat padding-box;
     box-shadow: 0 3px 6px #00000052;
-    opacity: 1;
     margin-left: 200px;
     border: none;
     text-align: center;
@@ -129,16 +119,15 @@
     width: 67px;
     height: 10px;
     background: #EA2340 0% 0% no-repeat padding-box;
-    opacity: 1;
     margin-left: 535px;
     margin-top: 25px;
+    margin-bottom: 25px;
     clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
 }
 .redNumber{
     font: Bold 130px/130px Bebas Neue;
     letter-spacing: 0;
     color: #EA2340;
-    opacity: 1;
     display: inline-block;
     margin-right: 40px;
     margin-bottom: 0;
@@ -151,7 +140,6 @@
     letter-spacing: 0;
     color: #062639;
     text-transform: capitalize;
-    opacity: 1;
     display: inline-block;
     margin-right: 2em;
     margin-top: 2em;
@@ -164,14 +152,12 @@
     font: Bold 16px/24px Raleway;
     letter-spacing: 0;
     color: #062639;
-    opacity: 1;
     display: inline-block;
 }
 
 
 .inlineBlock{
     display: inline-block;
-    /*clip-path: polygon(0 1%, 75% 0, 100% 99%,  25% 100%, );*/
     width: 37em;
     text-align: center;
 }
@@ -180,7 +166,7 @@
 }
 .vehicle3{
     margin-right: -14em;
-
+    /*clip-path: polygon(0 0%, 100% 0, 100% 100%,  35% 100%);*/
 }
 
 
@@ -193,14 +179,14 @@
     height: 29em;
     background: #EA2340;
     display: flex;
-    /*clip-path: polygon(0 1%, 95% 0, 100% 99%,  55% 100%, );*/
+    clip-path: polygon(95% 0, 100% 24%, 100% 100%, 5% 100%, 0 80%, 0 0);
 }
 .blueBackGround{
     margin-bottom: 2em;
     background: #062639 0% 0% no-repeat padding-box;
     height: 32em;
     width: 120em;
-
+    overflow:hidden
 
 }
 .imageSizing{
@@ -216,7 +202,6 @@
     letter-spacing: 0;
     color: #FFFFFF;
     text-transform: capitalize;
-    opacity: 1;
     display: inline-block;
     margin-top: 16px;
     margin-left: 10.5em;
@@ -229,7 +214,6 @@
     width: 89px;
     height: 89px;
     background: transparent 0% 0% no-repeat padding-box;
-    opacity: 1;
     display: inline-block;
     margin-right: 2em;
 
@@ -242,7 +226,6 @@
     font: Bold 16px/24px Raleway;
     letter-spacing: 0;
     color: #EA2340;
-    opacity: 1;
 }
 
 .blackSmalltext {
@@ -252,7 +235,6 @@
     font: Bold 13px/24px Raleway;
     letter-spacing: 0;
     color: #06263998;
-    opacity: 1;
 }
 .section2Wrapper {
     display: flex;
@@ -289,7 +271,6 @@
     height: 91px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000052;
-    opacity: 1;
     margin-left:25em;
     padding: 0em;
 
@@ -304,7 +285,6 @@
 }
 .perDayBox {
     display: inline-block;
-
 }
 
 .dollarSign {
@@ -314,7 +294,6 @@
     font: Bold 31px/102px Raleway;
     letter-spacing: 0;
     color: #EA2340;
-    opacity: 1;
     display: inline-block;
     margin-bottom: 1.5em;
 }
@@ -327,7 +306,6 @@
     letter-spacing: 0;
     color: #EA2340;
     text-transform: capitalize;
-    opacity: 1;
     display: inline-block;
 
 }
@@ -344,48 +322,35 @@
     letter-spacing: 0;
     color: #06263998;
     text-transform: capitalize;
-    opacity: 1;
 }
 
 .flexContainerForm {
     display: flex;
-
 }
 
 .loginContainer {
-    /*top: 80px;*/
-    /*left: 1291px;*/
     width: 629px;
     height: 766px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #0000005F;
-    opacity: 1;
     display: inline-block;
 
 
 }
 
 .loginInputContainer{
-    /*top: 258px;*/
-    /*left: 1320px;*/
     width: 427px;
     height: 279px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
-    opacity: 1;
-
-
 }
 
 .recoverySentMessage{
-    /*top: 375px;*/
-    /*left: 1432px;*/
     width: 204px;
     height: 45px;
     text-align: center;
     font:  18px/24px Raleway;
     letter-spacing: 0;
     color: #062639;
-    opacity: 1;
 }
 
 .formWrapperLeft{
@@ -395,7 +360,6 @@
     width: 120em;
     height: 766px;
     background: transparent 0 0 no-repeat padding-box;
-    opacity: 1;
     display: inline-block;
     margin-left: -40em;
 }
@@ -411,20 +375,48 @@
     margin-left: 12em;
 }
 
-.searchWithoutRegContainer{
-    top: 164px;
-    left: 0px;
-    width: 609px;
-    height: 914px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #0000005F;
-    opacity: 1;
-}
+
 
 .sortByWrapper {
     display: flex;
 
 }
+
+
+.sortBigWrapper{
+    margin-left: 12.5em;
+    margin-top: 5em;
+    margin-bottom: 5em;
+}
+.vehicleBlueName{
+    top: 482px;
+    left: 1231px;
+    width: 148px;
+    height: 32px;
+    text-align: left;
+    font: Bold 32px/38px Bebas Neue;
+    letter-spacing: 0;
+    color: #062639;
+    text-transform: capitalize;
+}
+
+.hidden{
+    display: none;
+    visibility: hidden;
+}
+
+/*Registration without container*/
+.registrationPhotoContainer{
+    width: 526px;
+    height: 358px;
+}
+
+.searchWithoutRegContainer{
+    margin-top: 20px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #0000005F;
+}
+
 .lowToHigh{
     clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
     top: 529px;
@@ -434,6 +426,15 @@
     text-align: left;
     font: Bold 16px/24px Raleway;
     letter-spacing: 0;
-    background: #5F727E;
-    opacity: 1;
+    background: #6C7E8B;
+    margin-right: 2px;
+}
+.highToLow{
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 20% 100%);
+    width: 131px;
+    height: 19px;
+    text-align: left;
+    font: Bold 16px/24px Raleway;
+    letter-spacing: 0;
+    border: 1px solid #6C7E8B;
 }
