--- a/src/App.css
+++ b/src/App.css
@@ -437,3 +437,13 @@
     letter-spacing: 0;
     border: 1px solid #6C7E8B;
 }
+
+.blue{
+    background: blue;
+
+}
+
+.green{
+     background: green;
+
+}
