--- a/src/App.css
+++ b/src/App.css
@@ -68,12 +68,8 @@
     margin-top: 0px;
 }
 .formWrapper{
-    top: 59px;
-    left: 0px;
-    width: 120em;
-    height: 48em;
     background: transparent 0% 0% no-repeat padding-box;
-    display: flex;
+    background-size: cover;
 }
 
 
@@ -124,19 +120,16 @@
     clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
 }
 .redNumber{
-    font: Bold 100px/100px Bebas Neue;
-    letter-spacing: 0;
+    font: Bold 70px/70px Bebas Neue;
     color: #EA2340;
-    margin-right: 40px;
-    margin-bottom: 0;
-    margin-left: 40px;
+    margin-right: 30px;
+    margin-left: 80px;
 }
 
 .blueBigText{
     width: 13em;
     text-align: left;
-    font: Bold 44px/44px Bebas Neue;
-    letter-spacing: 0;
+    font: Bold 34px/34px Bebas Neue;
     color: #062639;
     text-transform: capitalize;
     margin-right: 2em;
@@ -145,10 +138,7 @@
 }
 
 .smallBlueText{
-    width: 641px;
-    text-align: left;
-    font: Bold 12px/20px Raleway;
-    letter-spacing: 0;
+    font: Bold 12px/18px Raleway;
     color: #062639;
     /*margin-left: ;*/
 }
@@ -183,7 +173,6 @@
     margin-bottom: 2em;
     background: #062639 0% 0% no-repeat padding-box;
     height: 32em;
-    width: 120em;
     overflow:hidden
 
 }
@@ -251,7 +240,7 @@
 
 
 .nameDateWrapper {
-    padding-left: 7.5em;
+    padding-left: 18%;
     margin-bottom: 3em;
 }
 .marginTop{
@@ -271,8 +260,19 @@
     box-shadow: 0px 3px 6px #00000052;
     margin-left:25em;
     padding: 0em;
+}
+
+.blackPriceBox {
+    width: 10em;
+    height: 91px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000052;
+    margin-left: 350px;
+    margin-top: -150px;
+    background: #FFFFFF;
 
 }
+
 .dollarBox {
     display: inline-block;
     margin-left: -2.5em;
@@ -286,13 +286,15 @@
 }
 
 .dollarSign {
-    /*width: 18px;*/
-    /*height: 34px;*/
-    /*text-align: center;*/
     font: Bold 31px/102px Raleway;
-    letter-spacing: 0;
     color: #EA2340;
     display: inline-block;
+    margin-bottom: 1.5em;
+}
+.dollarSignBlack{
+    display: inline-block;
+    font: Bold 31px/102px Raleway;
+    color: #062639;
     margin-bottom: 1.5em;
 }
 
@@ -305,8 +307,18 @@
     color: #EA2340;
     text-transform: capitalize;
     display: inline-block;
-
 }
+
+.priceBlack{
+    display: inline-block;
+    width: 70px;
+    height: 59px;
+    text-align: center;
+    font: Bold 59px/71px Bebas Neue;
+    color: #062639;
+    margin-top: 20px;
+}
+
 
 .perDay {
     margin-left: 50px;
@@ -320,6 +332,16 @@
     letter-spacing: 0;
     color: #06263998;
     text-transform: capitalize;
+}
+
+.perDaySmall{
+    width: 16px;
+    height: 40px;
+    transform: matrix(0, -1, 1, 0, 0, 0);
+   margin-left: 35px;
+    font: Bold 16px/19px Bebas Neue;
+    color: #06263998;
+    display: inline-block;
 }
 
 .flexContainerForm {
@@ -405,15 +427,22 @@
 
 /*Registration without container*/
 .registrationPhotoContainer{
-    width: 506px;
-    height: 338px;
+    width: 500px;
+    height: 332px;
 }
 
 .searchWithoutRegContainer{
-    margin-top: 20px;
+    margin-top: 50px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #0000005F;
 }
+
+.vehicleCardsContainer{
+    margin-top: 50px;
+}
+
+.lowToHigh:hover{
+   background: #6C7E8B;}
 
 .lowToHigh{
     clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
@@ -424,9 +453,15 @@
     text-align: left;
     font: Bold 16px/24px Raleway;
     letter-spacing: 0;
-    background: #6C7E8B;
+    background: #FFFFFF;
     margin-right: 2px;
+
+    border: 1px solid #6C7E8B;
 }
+
+.highToLow:hover{
+    background: #6C7E8B;}
+
 .highToLow{
     clip-path: polygon(0 0, 100% 0, 100% 100%, 20% 100%);
     width: 131px;
@@ -435,6 +470,10 @@
     font: Bold 16px/24px Raleway;
     letter-spacing: 0;
     border: 1px solid #6C7E8B;
+}
+
+.firstVehicleRow{
+    margin-bottom: 50px;
 }
 
 .blue{
