--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+Link {
+    text-decoration: none;
+}
+Link:hover{
+    text-decoration: none;
+}
 
 .HeaderBox {
     height: 80px;
@@ -37,7 +43,9 @@
     font: Bold 16px/19px Raleway;
     color: #FFFFFF;
     cursor: pointer;
+    text-decoration: none;
 }
+
 /* Изменение цвета ссылок при наведении курсора */
 
 /* Добавить цвет для активной/текущей ссылки */
@@ -47,77 +55,67 @@
 }
 
 .redText {
-    top: 235px;
     width: 287px;
     height: 37px;
     font: Bold 32px/59px Raleway;
-    letter-spacing: 0;
     color: #EA2340;
-    margin-left: 6.25em;
-    margin-bottom: 2px;
+    margin-left: 30px;
+    margin-bottom: 10px;
 }
 
 .greyText {
-    top: 267px;
-    left: 199px;
     width: 207px;
-    height: 19px;
+    height: 17px;
     text-align: left;
     font: Bold 16px/24px Raleway;
-    letter-spacing: 0;
     color: #06263998;
-    margin-left: 12.5em;
-    margin-top: 0px;
+    margin-left: 30px;
 }
+
 .formWrapper{
-    /*background: transparent 0% 0% no-repeat padding-box;*/
-    background-size: cover;
+    background: transparent 0% 0% no-repeat padding-box;
+    /*background-size: cover;*/
     height: 766px;
+    background-size: auto;
 }
 
 
 .searchContainer{
     margin-top: 50px;
     margin-bottom: 10px;
-    width: 609px;
-    height: 479px;
+    width: 509px;
+    height: 500px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #0000005F;
 
 }
 .inputShape{
-    top: 311px;
-    left: 199px;
-    width: 371px;
-    height: 47px;
-    border: 1px solid #5F727E;
-    margin-left: 12.5em;
-    margin-bottom: 20px;
-    margin-top: 5px;
+    width: 280px;
+    height: 37px;
+    border: 1px solid #06263998;
+    margin-left: 2em;
+    margin-bottom: 10px;
+
 }
 
 .yallaBtn{
-    top: 492px;
-    left: 199px;
     width: 188px;
     height: 48px;
     background: #EA2340 0 0 no-repeat padding-box;
     box-shadow: 0 3px 6px #00000052;
-    margin-left: 200px;
+    margin-left: 100px;
+    margin-top:50px;
     border: none;
     text-align: center;
     font: Bold 18px/49px Raleway;
-    letter-spacing: 0;
     color: #FFFFFF;
 }
 
 .redLine{
-    top: 567px;
-    left: 539px;
     width: 67px;
     height: 10px;
     background: #EA2340 0% 0% no-repeat padding-box;
-    margin-left: 500px;
+    margin-right: 30px;
     margin-top: 85px;
     margin-bottom: 25px;
     clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
@@ -148,12 +146,12 @@
 
 
 .inlineBlock{
-    display: inline-block;
-    width: 37em;
-    text-align: center;
+margin-left: -24em;
+
+
 }
 .vehicle1{
-    margin-left: -14em;
+    margin-left: -15em;
 }
 .vehicle3{
     margin-right: -14em;
@@ -167,21 +165,23 @@
     margin-top:4em;
 }
 .redBackGround{
-    height: 29em;
+    height: 31em;
     background: #EA2340;
-    display: flex;
-    clip-path: polygon(95% 0, 100% 24%, 100% 100%, 5% 100%, 0 80%, 0 0);
+    clip-path: polygon(95% 0, 100% 15%, 100% 100%, 5% 100%, 0 80%, 0 0);
+    padding-top: 15px;
 }
 .blueBackGround{
     margin-bottom: 2em;
     background: #062639 0% 0% no-repeat padding-box;
-    height: 32em;
-    overflow:hidden
+    height: 34em;
+    /*overflow:hidden*/
 
 }
 .imageSizing{
-    height: 25em;
-    width: 65em;
+    height: 20em;
+    width: 52em;
+    /*height: 100%;*/
+    /*width: 100%;*/
 }
 
 .vehicleName{
@@ -249,37 +249,47 @@
 .marginTop{
     margin-top: 20px;
 }
+.marginTop2{
+    margin-top: 35px;
+}
+
 .marginLeft {
     margin-left: 5em;
 }
-.displayInline{
-    display: inline-block;
+
+.marginLeft2{
+    margin-left: 30px;
 }
 
 .whitePriceBox {
-    width: 15em;
+    width: 13em;
     height: 91px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000052;
-    margin-left:25em;
-    padding: 0em;
+    margin-left:21em;
+    display: inline-block;
+
 }
 
 .blackPriceBox {
+    display: inline-block;
     width: 10em;
-    height: 91px;
+    height: 80px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000052;
-    margin-left: 350px;
-    margin-top: -150px;
-    background: #FFFFFF;
+    margin-left: 280px;
+    margin-top: -180px;
+    text-align: center;
+}
 
+.searchWithoutReg{
+    margin-top:50px;
 }
 
 .dollarBox {
     display: inline-block;
     margin-left: -2.5em;
-   margin-top: -2.5em;
+    margin-top: -2.5em;
 }
 .priceBox {
     display: inline-block;
@@ -352,14 +362,11 @@
 }
 
 .loginContainer {
-    width: 629px;
+    width: 529px;
     height: 766px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #0000005F;
-    display: inline-block;
-
-
-}
+ }
 
 .loginInputContainer{
     width: 427px;
@@ -377,13 +384,9 @@
 }
 
 .formWrapperLeft{
-    /*top: 59px;*/
-    /*left: -629px;*/
-
     width: 120em;
     height: 766px;
     background: transparent 0 0 no-repeat padding-box;
-    display: inline-block;
     margin-left: -40em;
 }
 
@@ -398,45 +401,34 @@
     margin-left: 12em;
 }
 
-
-
 .sortByWrapper {
     display: flex;
-
+    margin-top: 2em;
 }
 
 
 .sortBigWrapper{
-    margin-left: 12.5em;
-    margin-top: 5em;
-    margin-bottom: 5em;
+    margin-left: 30px;
+    margin-top: 3em;
+    margin-bottom:5em;
 }
 .vehicleBlueName{
-    top: 482px;
-    left: 1231px;
-    width: 148px;
-    height: 32px;
+    height: 22px;
     text-align: left;
-    font: Bold 32px/38px Bebas Neue;
-    letter-spacing: 0;
+    font: Bold 22px/28px Bebas Neue;
     color: #062639;
-    text-transform: capitalize;
 }
 
 .hidden{
     display: none;
     visibility: hidden;
 }
-
-/*Registration without container*/
 .registrationPhotoContainer{
-    width: 500px;
-    height: 332px;
+    width: 450px;
+    height: 282px;
 }
 
 .searchWithoutRegContainer{
-    margin-top: 50px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #0000005F;
 }
 
@@ -444,35 +436,36 @@
     margin-top: 50px;
 }
 
-.lowToHigh:hover{
-   background: #6C7E8B;}
+ .highToLow:hover{
+   background: #6C7E8B;
+    color: #FFFFFF;
 
-.lowToHigh{
+ }
+
+ .lowToHigh:hover{
+     background: #6C7E8B;
+     color: #FFFFFF;}
+
+.lowToHigh, .highToLow{
     clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
     top: 529px;
     left: 205px;
-    width: 131px;
-    height: 19px;
+    width: 151px;
+    height: 23px;
     text-align: left;
     font: Bold 16px/24px Raleway;
     letter-spacing: 0;
     background: #FFFFFF;
     margin-right: 2px;
-
+    color: #06263998;
     border: 1px solid #6C7E8B;
+    padding: 2px;
 }
-
-.highToLow:hover{
-    background: #6C7E8B;}
 
 .highToLow{
     clip-path: polygon(0 0, 100% 0, 100% 100%, 20% 100%);
-    width: 131px;
-    height: 19px;
-    text-align: left;
-    font: Bold 16px/24px Raleway;
-    letter-spacing: 0;
-    border: 1px solid #6C7E8B;
+    margin-left: -22px;
+    text-align: right;
 }
 
 .firstVehicleRow{
@@ -487,4 +480,78 @@
 .green{
      background: green;
 
+}
+
+.tabDiv{
+    height: 7px;
+    background: #EA2340 0% 0% no-repeat padding-box;
+    width:19.7em;
+}
+
+.filtersTab{
+    text-align: center;
+    width: 73px;
+    height: 38px;
+    background: #062639 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    border: 2px solid #FFFFFF;
+    display: inline-block;
+    clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
+    color: #FFFFFF;
+}
+
+.mapTab{
+    width: 73px;
+    height: 38px;
+    background: #6C7E8B 0% 0% no-repeat padding-box;
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    display: inline-block;
+    clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
+    text-align: center;
+    margin-left: -15px;
+}
+
+.searchTab{
+    width: 120px;
+    height: 48px;
+    background: #EA2340 0% 0% no-repeat padding-box;
+    display: inline-block;
+    clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
+    color: #FFFFFF;
+    margin-right: -15px;
+    text-align: center;
+    padding-top: 12px;
+}
+
+.tabContainer{
+    display:inline-block;
+    width:20em;
+}
+
+.singleVehicleMargin{
+    margin-left: 10em;
+    margin-bottom: 4em;
+}
+
+.vehicleYear {
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    font: Bold 19px/31px Bebas Neue;
+    color: #062639;
+}
+
+.letYourCarWork{
+    height: 170px;
+}
+
+.greyTextBox {
+    width: 507px;
+    height: 19px;
+    text-align: left;
+    font: Bold 13px/22px Raleway;
+    color: #06263998;
+    margin-left: 30px;
+    margin-top: 40px;
 }
